# hamaStickyNotes

./: .gitignore  package.json  tailwind.config.js
src/: App.css  App.tsx  func.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
